--- a/04-Graphical-User-Interface--GUI-.Rmd
+++ b/04-Graphical-User-Interface--GUI-.Rmd
@@ -5,18 +5,21 @@ This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
 **The following is covered in this chapter:**
 
-- 4.1. Introduction
-- 4.2. {VIBE} Menu
-- 4.2.1 Exit Button Location
-- 4.3. Layouts
-- 4.3.1 Show/Hide View Headers
-- 4.4. Smart Screen
-- 4.5. Toolbars
-- 4.6. Live Display
-- 4.7. Live Parameter Display
-- 4.7.1. Parameter Mode
-- 4.7.2. Bank Mode
-- 4.7.3. Fixture Mode
+- 4.1.   Introduction
+- 4.2.   {VIBE} Menu
+- 4.2.1  Exit Button
+- 4.3    Configuring WorkSpaces
+- 4.3.1  Basics
+- 4.3.2  Show/Hide View Headers
+- 4.4.   Layouts
+- 4.5.   Smart Screen
+- 4.6.   Toolbars
+- 4.7.   Live Display
+- 4.7.1. Live View Settings
+- 4.8.   Live Parameter Display
+- 4.8.1. Parameter Mode
+- 4.8.2. Bank Mode
+- 4.8.3. Fixture Mode
 
 
 ## Introduction
@@ -25,13 +28,13 @@ Vibe uses a Multi-touch based interface with simple familiar gestures for naviga
 
 -   Supported gestures: 
 
-◾ Two fingers for swipe and scrolling. 
+    ◾ Two fingers for swipe and scrolling. 
 
-◾ One finger select.
+    ◾ One finger select.
 
-◾ Multi-selection via ⤴️⤵️shaped gestures. 
+    ◾ Multi-selection via ⤴️⤵️shaped gestures. 
 
-◾ Multi-selection via window.
+    ◾ Multi-selection via window.
     
 -   Vibe directly supports up to 4 monitors, two embedded and two external. (Additional monitors may be added using DisplayPort 1.2 or higher MST splitter for a total of 4 external monitors at 1920 x 1080 resolution). 
 The large 21" embedded screen is general-purpose like the external monitors.
@@ -52,9 +55,9 @@ The large 21" embedded screen is general-purpose like the external monitors.
     
 -   Workspace Templates are organized into three familiar categories, each with a dedicated display key. These keys are found above the top left corner of the **Smart Screen**: 
 
-◾ **[PATCH]** 
-
-◾ **[PROG]** - (Program) ◾ **[PLAY-B]** - (Playback Controllers)
+    ◾ **[PATCH]** 
+    ◾ **[PROG]** - (Program) 
+    ◾ **[PLAY-B]** - (Playback Controllers)
     
 -   The Workspace Template Keys are specific to the monitor that has focus (last touched or selected via a mouse).
     
@@ -71,8 +74,10 @@ The **{VIBE}** Menu is a hierarchical menu containing logically grouped sub-menu
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FhnmbOYCxpKpFeS3PTChB%2F4.2.webp?alt=media&token=127302c8-d5cc-43aa-92f1-7eee592f68a8)
 
+### Exit Button
 
-### Exit Button Location
+The Exit button location was moved to a sub menu instead of being located on the main menu. The same happened with the Close button that closes a window. The reason for doing that is because user may mistakenly tap this button on it’s previous location. The buttons are now located under the Windows sub-menu.
+
 
 **To exit Vibe or close a window**
 
@@ -87,10 +92,10 @@ The **{VIBE}** Menu is a hierarchical menu containing logically grouped sub-menu
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FFV8W9WgLTCerYjssYKJD%2Fimage.png?alt=media&token=a171e965-52eb-47d5-b975-7bd50df1ac00)
 
+## Configuring WorkSpaces
 
 
-
-**Configuring WorkSpaces:**
+### Basics
 
 -   When configuring workspaces, any object at the end of the hierarchical sub-menu can be tapped to open its object on a blank portion of the current workspace or dragged and dropped to the workspace surface. Once on the surface it may be moved or sized freely, space permitting.
     
@@ -104,20 +109,9 @@ The **{VIBE}** Menu is a hierarchical menu containing logically grouped sub-menu
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FRgauawhpMT9fs8UyREov%2F4.2.1.webp?alt=media&token=9ba0114d-9b28-4942-b8cc-835d775dae8b)
 
 
-
-## Layouts
-
-**Layouts:**
-
--   After all workspaces and associated pages are configured, the display configurations of the workspaces can be saved to a **Layout** by tapping the **{VIBE}** Menu and then the **{LAYOUT}** key. A Sub-menu will open with options to **{SAVE LAYOUT}**, **{LOAD LAYOUT}**.
-    
--   After configuring external monitors, a layout should be saved to preserve the external monitor layout on reboot.
-    
--   Layouts remember the configuration of external monitors and a warning message will appear if the system is booted without the expected external monitor.
-
 ### Show/Hide View Headers
 
-There is an option to show or hide view headers. This option is valid when the layout is unlocked and the view is selected. Showing or hiding a view's header is saved in the layout once layout is saved. Loading old layouts will load view with their headers as they were stored before. 
+This option is valid when the layout is unlocked and the view is selected. Showing or hiding a view's header is saved in the layout once layout is saved. Loading old layouts will load view with their headers as they were stored before. 
 
 
 **To Show/Hide View Header**
@@ -133,6 +127,18 @@ There is an option to show or hide view headers. This option is valid when the l
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F9B5NTIysFGLAcAACtoIr%2Fimage.png?alt=media&token=f0d63ddd-259d-43c7-bd02-709fb7315cc1)
 
 
+## Layouts
+
+**Layouts:**
+
+-   After all workspaces and associated pages are configured, the display configurations of the workspaces can be saved to a **Layout** by tapping the **{VIBE}** Menu and then the **{LAYOUT}** key. A Sub-menu will open with options to **{SAVE LAYOUT}**, **{LOAD LAYOUT}**.
+    
+-   After configuring external monitors, a layout should be saved to preserve the external monitor layout on reboot.
+    
+-   Layouts remember the configuration of external monitors and a warning message will appear if the system is booted without the expected external monitor.
+
+
+
 
 
 ## Smart Screen
@@ -140,7 +146,8 @@ There is an option to show or hide view headers. This option is valid when the l
 
 The 11.6" multi-touch monitor embedded in the upper section of the Vibe console is referred to as the **Smart Screen**. The **Smart Screen** is dedicated to displaying context sensitive interactive bank, wheel, and parameter information. **For more detail see:**
 
-9.3.4 Smart Screen
+[9.3.4. Smart Screen](https://compulite2021.github.io/Vibe-Guide/programming-basics.html#smart-screen-1)
+
 
 ## Toolbars
 
@@ -150,11 +157,13 @@ The 11.6" multi-touch monitor embedded in the upper section of the Vibe console 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FEtMwno5lafumX8bqox4j%2F4.5.webp?alt=media&token=c082bd36-0eb9-4402-8a03-bede1ce46ec1)
 
 **The Patch Toolbar contains two pages of options:**
+ 
  ◾ Idle state toolbar
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fk1fZqMaKocauppohAgHw%2F4.5.1.webp?alt=media&token=c8cafb32-4d46-4284-ab22-4dfc5699cf4b)
 
 ◾ Fixture selection state toolbar
+
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fn6vIb0nGIrhdgceYRjec%2F4.5.2.webp?alt=media&token=0ef6d1a9-45f8-4015-b8c0-c1e3a115df30)
 
 ## Live Display
@@ -170,19 +179,17 @@ Vibe has two ways to display parameter data:
 
 **The Live Display has a number of options that may be set under the Options field:**
 
--   ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FRsKkH1GR7Zny1naiOQVr%2Fimage.png?alt=media&token=67514158-ffd4-4fc1-86f5-d870d259b8fe)
-    
-    **-** Opens Live View Settings. (See [4.6.1.Live View Settings](/s/3kS90tLsADGm1ocbe7q9/4.-graphical-user-interface-gui/4.-graphical-user-interface-gui/4.6.1.-live-view-settings).)
+-   ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FRsKkH1GR7Zny1naiOQVr%2Fimage.png?alt=media&token=67514158-ffd4-4fc1-86f5-d870d259b8fe) **-** Opens Live View Settings. (See [4.6.1.Live View Settings](/s/3kS90tLsADGm1ocbe7q9/~/changes/WdkBzgj8gGqCInAC3DkK/4.-graphical-user-interface-gui/4.-graphical-user-interface-gui/4.8.1.-live-view-settings).)
     
 -   **Fit** - Opens column width options. 
 
-◾ Fit to Window 
+    ◾ Fit to Window 
 
-◾ Fit to Value 
+    ◾ Fit to Value 
 
-◾ Fix by Text 
+    ◾ Fix by Text 
 
-◾ Default
+    ◾ Default
     
 -   **Active on Stage** - Only parameter columns that are selected in the editor or have values derived from the active stage look are shown. All others are hidden.
     
@@ -209,97 +216,125 @@ Vibe has two ways to display parameter data:
 
 ◾ Text + Percentage
 
-## Live Parameter Display
+### Live View Settings
+
 
 
 Live View Settings pop-up - Display Tab.
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FWo8asBh4pNKMfQ4bcO9k%2F4.7.png?alt=media&token=f827d0e1-c5f4-4a95-832b-c78bcb056dba)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F5uGp3hwefoypGXdWveRx%2F4.7.webp?alt=media&token=ab20ee96-1d11-43a8-bdf2-b4183886bcb0)
+
+
 
 **Live View Scheme** - Parameter columns may be freely added, removed, moved in using the Live View Scheme.
 
 **Move columns:**
 
-1.  Tap a parameter column heading or multiple parameter column headings
+1. Tap a parameter column heading or multiple parameter column headings
     
-    > the green indicator light will turn on.
+    -the green indicator light will turn on.
     
-2.   Use the **{|< }** or **{>|}** keys to move the parameter column forward or backwards.
+
+2. Use the **{|< }** or **{>|}** keys to move the parameter column forward or backwards.
     
 
 **Move columns to the first or last column position:**
 
-1.   Tap a parameter column heading or multiple parameter column headings
+1. Tap a parameter column heading or multiple parameter column headings - the green indicator light will turn on.
     
-    > the green indicator light will turn on.
-    
+
 2.  Use the **{|<< }** or **{>>|}** keys to move the parameter column first position or last position.
     
 
 **Remove**  **columns:**
 
-1.  Tap a parameter column heading or multiple parameter column headings
+1. Tap a parameter column heading or multiple parameter column headings - the green indicator light will turn on.
     
-    > the green indicator light will turn on.
-    
-2.  Tap the **{Remove}** key.
+
+2. Tap the {Remove} key.
     
 
 **Dock** - Locks the column scroll at the end of the parameter column that is docked. A red line will show on the live display to show the dock position. (Group By Banks and All icons in 1 cell are not implemented yet)
 
 **Add Columns** - Columns are added using the Banks section of the pop-up.
 
-1.   Select a bank - All parameters for the bank will appear in the box adjacent to the banks.
-    
-2.   Select the parameter or parameters to add to the live display. 👉 Swipe in the the parameter box to browse hidden parameters.
-    
-3.  Tap a parameter that is not already selected in green and it will be added to the end of the column list.
-    
-Parameter keys are toggles so if the indicator light is on, touching the parameter will remove it. Tapping again will put it back at the end of the columns.
+1. Select a bank - All parameters for the bank will appear in the box adjacent to the banks.
+
+2. Select the parameter or parameters to add to the live display. 👉 Swipe in the the parameter box to browse hidden parameters.
+  
+3. Tap a parameter that is not already selected in green and it will be added to the end of the column list.
+
+
+><span style="color:Red">Parameter keys are toggles so if the indicator light is on, touching the parameter will remove it. Tapping again will put it back at the end of the columns.
+</span>.
+
 
 4. Use the **{|< }** or **{>|} {|<< }** or **{>>|}** to position the column.
 
 **Interactive Icons:** 
-
 ◾ Adds or removes the icon columns.
 
-Interactive Icon keys are toggles so if the indicator light is on, touching an icon key will remove it. Tapping again will put it back at the end of the columns.
+><span style="color:Red">Interactive Icon keys are toggles so if the indicator light is on, touching an icon key will remove it. Tapping again will put it back at the end of the columns.</span>.
+
+
 
 **General:** 
-
 ◾ Global Fixture Number - Fixture's hidden unique system number. 
-
 ◾ Fixture Layer Number - Adds or removes Fixture Number column. 
-
 ◾ Fixture Name - Adds or removes Fixture Name column.
 
-Fixture # and Fixture Name are toggles so if the indicator light is on, touching an icon key will remove it. Tapping again will put it back at the end of the columns.
+
+
+><span style="color:Red">Fixture # and Fixture Name are toggles so if the indicator light is on, touching an icon key will remove it. Tapping again will put it back at the end of the columns.</span>
+
+
 
 **Live View Settings pop-up - Behavior Tab**
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F0Cf1rvhFttH5PpWmRGsr%2F4.7.1.webp?alt=media&token=add0fffb-777d-4be4-b946-9baf95669f4e)
 
+
 **Fixture Jumping**: 
 
 ◾ Off 
-
 ◾ Jump if needed - live display pages the display to show the selected fixtures if they are not shown on the current live page. 
+◾ Lowest Selection to Top - Jumps the lowest fixture number of the selection to the top of the live display. 
 
-◾ Lowest Selection to Top - Jumps the lowest fixture number of the selection to the top of the live display.
+**Parameter Jumping**: 
+◾ Jumps the parameter's column and related bank parameters to the end of the dock position. (First scrollable column). 
 
- **Parameter Jumping**: 
- 
- ◾ Jumps the parameter's column and related bank parameters to the end of the dock position. (First scrollable column). **Interactive Fixture Selection:**  
- 
- ◾ Turns on the ability to make fixture selections from the live display grids. **Interactive**  **Cell Editing:**  
+**Interactive Fixture Selection:**  
+◾ Turns on the ability to make fixture selections from the live display grids. 
 
- ◾ Turns on the ability to directly edit cells in the live display grid. **Interactive Header selection** - Currently implemented but may not be turned off. 
- 
- ◾ Enables parameters to be directly selected from the live display headers. **Submaster Values:** 
- 
- ◾ **Show Stored Values** - Dimmer parameters under the control of Group Submasters will continue to show their stored values and the  [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FXIJXhWCSwMTbGG7esTB5%2Fimage.png?alt=media&token=35bbd680-0f4c-4b4f-b659-94e00a30f028" width="30"/>](image.png)  icon will also be shown to indicate when the parameter is inhibited. 
- 
- ◾ **Show Output Values** - When the Submaster is pulled down, the actual dimmer output values will be shown in the live display dimmer column.
+**Interactive**  **Cell Editing:**  
+◾ Turns on the ability to directly edit cells in the live display grid. 
+
+**Interactive Header selection** - Currently implemented but may not be turned off. 
+◾ Enables parameters to be directly selected from the live display headers. 
+
+**Submaster Values:** 
+◾ **Show Stored Values** - Dimmer parameters under the control of Group Submasters will continue to show their stored values and the [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FXIJXhWCSwMTbGG7esTB5%2Fimage.png?alt=media&token=35bbd680-0f4c-4b4f-b659-94e00a30f028" width="30"/>](image.png) icon will also be shown to indicate when the parameter is inhibited. 
+
+◾ **Show Output Values** - When the Submaster is pulled down, the actual dimmer output values will be shown in the live display dimmer column.
+
+
+
+## Live Parameter Display
+
+
+The Live Parameter Display shows values in a table format instead of spreadsheet format. 
+
+**There are three Live Parameter Modes:** 
+
+    ◾ Live Parameters 
+    ◾ Live Banks 
+    ◾ Live Fixtures
+
+Live Parameter Mode is mainly used to display single parameter fixtures similar to theatrical consoles but is far more versatile.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FG5hlBdfBjmea6tjbutqi%2Fimage.png?alt=media&token=2a667d38-c262-4bbf-b802-dedade61d1a2)
+
+
 
 ### Parameter Mode
 
