--- a/04-Graphical-User-Interface--GUI-.Rmd
+++ b/04-Graphical-User-Interface--GUI-.Rmd
@@ -22,9 +22,12 @@ Vibe uses a Multi-touch based interface with simple familiar gestures for naviga
 
 -   Supported gestures:
 
-    ◾ Two fingers for swipe and scrolling. 
+    ◾ Two fingers for swipe and scrolling.
+    
     ◾ One finger select. 
+    
     ◾ Multi-selection via ⤴️⤵️shaped gestures. 
+    
     ◾ Multi-selection via window.
     
 
@@ -54,11 +57,11 @@ Vibe uses a Multi-touch based interface with simple familiar gestures for naviga
 
 -   Workspace Templates are organized into three familiar categories, each with a dedicated display key. These keys are found above the top left corner of the **Smart Screen**: 
 
-	◾  [PATCH]
+    ◾  **[TEST]**
 	
-	◾  **[PROG]** - (Program) 
+    ◾  **[PROG]** - (Program) 
 	
-	◾  **[PLAY-B]** - (Playback Controllers)
+    ◾  **[PLAY-B]** - (Playback Controllers)
     
 
 -   The Workspace Template Keys are specific to the monitor that has focus (last touched or selected via a mouse).
